--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Media/Logo WeJob!.png">
+    <link rel="icon" href="media/logowejob.png">
     <title>WeJob!</title>
-    <link rel="stylesheet" href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\styles.css">
+    <link rel="stylesheet" href="estilo.css"
 </head>
 <body>
     <Header>
         <Section class="titulo">
             <div class="logo">
-                <img class="logo" src="./Media/Logo WeJob!.png" alt="Logo">     
+                <img class="logo" src="media/logowejob.png" alt="Logo">     
             </div>
             <H1>WeJob!</H1>
             <h2>¡Donde encontrarás a tu profesional ideal!</h2>
@@ -20,16 +20,16 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\index.html">Inicio</a>
+                    <a href="#">Inicio</a>
                 </li>
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Pages\categorias.html">Categorias</a>
+                    <a href="pages/categorias.html">Categorias</a>
                 </li>
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Pages\mediodepago.html">Medios de pago</a>
+                    <a href="pages/mediosdepago.html">Medios de pago</a>
                 </li>
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Pages\login.html">Ingreso</a>
+                    <a href="pages/ingreso.html">Ingreso</a>
 
                 </li>
             </ul>
@@ -41,16 +41,16 @@
                 ¡El oficiante que necesitas al alcance de nuestras manos!
             </h2>
             <div id="EstrechandoManos">
-                <img src="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Media\Estrechando manos.jfif" alt="ApretonDeManos">
+                <img src= "media/estrechandomanos.jfif" alt="ApretonDeManos">
             </div>
             <div id="Electricidad">
-                <img src="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Media\Electricidad.jfif" alt="Electricista">
+                <img src="media/Electricidad.jfif"Electricista">
             </div>
             <div id="GasNatural">
-                <img src="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Media\Gas natural.jfif" alt="Gas natural">
+                <img src="media/gasnatural.jfif"Gas natural">
             </div>
             <div id="Plomería">
-                <img src="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Media\Plomería.jfif" alt="Plomería">
+                <img src="media/plomeria.jfif" alt="Plomería">
             </div>  
         </section>
     </main>
@@ -59,7 +59,7 @@
         <h3> 
             <ul class="footer">
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Pages\quienessomos.html">Quienes Somos</a> 
+                    <a href="pages/quienessomos.html">Quienes Somos</a> 
                 </li>
                 <li>
                     <a href="#">Contacto</a>
