--- a/pages/mediosdepago.html
+++ b/pages/mediosdepago.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeJob!</title>
-    <link rel="icon" href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Media\icon.ico">
-    <link rel="stylesheet" href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\styles.css">
+    <link rel="icon" href="media/logowejob.png">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <Header>
         <Section>
             <div class="logo">
-                <img class="logo" src="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Media\Logo WeJob!.png" alt="Logo">     
+                <img class="logo" src="media/logowejob.png" alt="Logo">     
             </div>
             <H1>WeJob!</H1>
             <h2>¡Donde encontrarás a tu profesional ideal!</h2>
@@ -23,16 +23,16 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\index.html">Inicio</a>
+                    <a href="#">Inicio</a>
                 </li>
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Pages\categorias.html">Categorias</a>
+                    <a href="pages/categorias.html">Categorias</a>
                 </li>
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Pages\mediodepago.html">Medios de pago</a>
+                    <a href="pages/mediosdepago.html">Medios de pago</a>
                 </li>
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Pages\login.html">Ingreso</a>
+                    <a href="pages/ingreso.html">Ingreso</a>
 
                 </li>
             </ul>
@@ -56,7 +56,7 @@
         <h3> 
             <ul class="footer">
                 <li>
-                    <a href="C:\Users\la04069\OneDrive - Alliance\Programación\We Job\Pages\quienessomos.html">Quienes Somos</a> 
+                    <a href="pages/quienessomos.html">Quienes Somos</a>
                 </li>
                 <li>
                     <a href="#">Contacto</a>
