--- a/pages/ingreso.html
+++ b/pages/ingreso.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeJob!-Login</title>
     <link rel="icon" href="media/logowejob.png">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="C:\Users\la04069\OneDrive - Alliance\Documentos\hola\estilo.css">
 </head>
 <body>
     <body>
         <header>
             <div class="logo">
-                <img class="logo" src="media/logowejob.png" alt="Logo">     
+                <img class="logo" src="C:\Users\la04069\OneDrive - Alliance\Documentos\hola\media\logowejob.png" alt="Logo">     
             </div>
             <h2>Login</h2>
         </header>
@@ -24,13 +24,13 @@
                         <a href="#">Inicio</a>
                     </li>
                     <li>
-                        <a href="pages/categorias.html">Categorias</a>
+                        <a href="categorias.html">Categorias</a>
                     </li>
                     <li>
-                        <a href="pages/mediosdepago.html">Medios de pago</a>
+                        <a href="mediosdepago.html">Medios de pago</a>
                     </li>
                     <li>
-                        <a href="pages/ingreso.html">Ingreso</a>
+                        <a href="ingreso.html">Ingreso</a>
     
                     </li>
                 </ul>
@@ -62,7 +62,7 @@
             <h3> 
                 <ul class="footer">
                     <li>
-                        <a href="pages/quienessomos.html">Quienes Somos</a>
+                        <a href="quienessomos.html">Quienes Somos</a>
                     </li>
                     <li>
                         <a href="#">Contacto</a>
