--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeJob!</title>
     <link rel="icon" href="media/logowejob.png">
-    <link rel="stylesheet" href="C:\Users\la04069\OneDrive - Alliance\Documentos\hola\estilo.css">
+    <link rel="stylesheet" href="C:/Users/la04069/OneDrive - Alliance/Documentos/hola/estilo.css">
 </head>
 <body>
     <Header>
