--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeJob!</title>
     <link rel="icon" href="media/logowejob.png">
-    <link rel="stylesheet" src="C:\Users\la04069\OneDrive - Alliance\Documentos\hola\estilo.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\la04069\OneDrive - Alliance\Documentos\hola\estilo.css">
 </head>
 <body>
     <Header>
@@ -23,7 +23,7 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="#">Inicio</a>
+                    <a href="C:\Users\la04069\OneDrive - Alliance\Documentos\hola\index.html">Inicio</a>
                 </li>
                 <li>
                     <a href="categorias.html">Categorias</a>
